Bug 63434 - Cleanup internal passing of credentials and options
Summary: Cleanup internal passing of credentials and options
Status: RESOLVED FIXED
Alias: None
Product: realmd
Classification: Unclassified
Component: General (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Stef Walter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on: 56022
Blocks: 54489 60637 60679 61215
  Show dependency treegraph
 
Reported: 2013-04-11 15:46 UTC by Stef Walter
Modified: 2013-04-26 11:14 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Cleanup passing around of credentials during join/leave operations (114.17 KB, patch)
2013-04-11 15:50 UTC, Stef Walter
Details | Splinter Review
More extensible passing of options to join/leave implementations (26.86 KB, patch)
2013-04-11 15:51 UTC, Stef Walter
Details | Splinter Review
Pass 'realm join' options in a structure (6.95 KB, patch)
2013-04-11 15:52 UTC, Stef Walter
Details | Splinter Review
More extensible passing of options to join/leave implementations (26.86 KB, patch)
2013-04-12 08:36 UTC, Stef Walter
Details | Splinter Review
Cleanup passing around of credentials during join/leave operations (114.19 KB, patch)
2013-04-12 11:53 UTC, Stef Walter
Details | Splinter Review
More extensible passing of options to join/leave implementations (26.94 KB, patch)
2013-04-12 14:07 UTC, Stef Walter
Details | Splinter Review
Cleanup passing around of credentials during join/leave operations (114.21 KB, patch)
2013-04-25 09:12 UTC, Stef Walter
Details | Splinter Review

Description Stef Walter 2013-04-11 15:46:53 UTC
The passing around of credentials and options internally has gotten a bit out of hand. I've invested some time into cleaning it up.
Comment 1 Stef Walter 2013-04-11 15:50:29 UTC
Created attachment 77820 [details] [review]
Cleanup passing around of credentials during join/leave operations
Comment 2 Stef Walter 2013-04-11 15:51:23 UTC
Created attachment 77821 [details] [review]
More extensible passing of options to join/leave implementations
Comment 3 Stef Walter 2013-04-11 15:52:09 UTC
Created attachment 77822 [details] [review]
Pass 'realm join' options in a structure
Comment 4 Stef Walter 2013-04-11 15:52:26 UTC
Yassir, are you interested in reviewing these?
Comment 5 Stef Walter 2013-04-12 08:36:45 UTC
Created attachment 77849 [details] [review]
More extensible passing of options to join/leave implementations

This update fixes a bug that this patch introduced in handle_deconfigure()
Comment 6 Stef Walter 2013-04-12 11:53:54 UTC
Created attachment 77869 [details] [review]
Cleanup passing around of credentials during join/leave operations

Fixed an assertion that occurred when using ChangeLoginPolicy() since
it's a method without any credetnials.
Comment 7 Stef Walter 2013-04-12 14:07:35 UTC
Created attachment 77879 [details] [review]
More extensible passing of options to join/leave implementations

Updated patch to always lower case realm names used as section headers
Comment 8 Stef Walter 2013-04-25 09:12:34 UTC
Created attachment 78451 [details] [review]
Cleanup passing around of credentials during join/leave operations

Updated the patch to fix some mistakes in realm-sssd-ipa.c
Comment 9 Stef Walter 2013-04-26 11:14:07 UTC
Attachment 77822 [details] pushed as 3a0a8e6 - Pass 'realm join' options in a structure
Attachment 77879 [details] pushed as 1a7215e - More extensible passing of options to join/leave implementations
Attachment 78451 [details] pushed as 5c6917b - Cleanup passing around of credentials during join/leave operations

Unfortunately review timed out on these patches, and other patches depend on them for
the upcoming test day. I've run these patches through their paces, reviewed them again,
found some bugs and tweaks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.