Pass 'realm join' options in a structure

* Too many options to be using arguments for them

https://bugs.freedesktop.org/show_bug.cgi?id=63434